google map added for teacher locati

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
         android:label="tutorhub"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data 
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCbJT2AeSADl7I-UfW9SzSa9lvbOJz9YZQ"
+        />
         <activity
             android:name=".MainActivity"
             android:exported="true"
