--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.7.0
   shared_preferences: ^2.2.3
   geolocator: ^12.0.0
+  google_maps_flutter: ^2.6.1
 
 dev_dependencies:
   flutter_test:
